WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68449
[EFL] Fix Evas_Object_Image reference counts and file descriptor leakage in ImageDiff.
https://bugs.webkit.org/show_bug.cgi?id=68449
Summary
[EFL] Fix Evas_Object_Image reference counts and file descriptor leakage in I...
Raphael Kubo da Costa (:rakuco)
Reported
2011-09-20 10:21:15 PDT
[EFL] Fix Evas_Object_Image reference counts and file descriptor leakage in ImageDiff.
Attachments
Patch
(3.37 KB, patch)
2011-09-20 10:22 PDT
,
Raphael Kubo da Costa (:rakuco)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2011-09-20 10:22:17 PDT
Created
attachment 108017
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2011-10-05 09:46:39 PDT
CC'ing tonikitoo.
Antonio Gomes
Comment 3
2011-10-05 10:10:46 PDT
Comment on
attachment 108017
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=108017&action=review
> Tools/DumpRenderTree/efl/ImageDiff.cpp:220 > -static void printImageDifferences(const Evas_Object* baselineImage, Evas_Object* actualImage) > +static void printImageDifferences(Evas_Object* baselineImage, Evas_Object* actualImage)
is this related?
Raphael Kubo da Costa (:rakuco)
Comment 4
2011-10-05 10:26:23 PDT
(In reply to
comment #3
)
> (From update of
attachment 108017
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=108017&action=review
> > > Tools/DumpRenderTree/efl/ImageDiff.cpp:220 > > -static void printImageDifferences(const Evas_Object* baselineImage, Evas_Object* actualImage) > > +static void printImageDifferences(Evas_Object* baselineImage, Evas_Object* actualImage) > > is this related?
Yes, otherwise we can't pass the non-const values to calculateDifference (which has also had its signature changed).
WebKit Review Bot
Comment 5
2011-10-05 10:50:31 PDT
Comment on
attachment 108017
[details]
Patch Clearing flags on attachment: 108017 Committed
r96723
: <
http://trac.webkit.org/changeset/96723
>
WebKit Review Bot
Comment 6
2011-10-05 10:50:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug