[EFL] Fix Evas_Object_Image reference counts and file descriptor leakage in ImageDiff. https://bugs.webkit.org/show_bug.cgi?id=68449

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-10-05
Reviewed by Antonio Gomes.

evas_render() must be called to close up temporary files and unmap unused
resources. evas_object_image_data_set() must be called after an
evas_object_image_data_get() to balance an internal reference count.

* DumpRenderTree/efl/ImageDiff.cpp:
(differenceImageFromDifferenceBuffer):
(calculateDifference):
(printImage):
(printImageDifferences):

Canonical link: https://commits.webkit.org/85484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96723 268f45cc-cd09-0410-ab3c-d52691b4dbfc